# learncplusplus

./: CMakeLists.txt  README.md
calc/: CMakeLists.txt  main.cpp
calc/include/cmaketest/: head.h
calc/src/cmaketest/: add.cpp  div.cpp  mult.cpp  sub.cpp
const/: CMakeLists.txt  main.cpp
const/include/: const_function.h  definetest.h  globalconst.h
const/src/: const_function.cpp  definetest.cpp
const/src/extern_const/: file1.cpp  file2.cpp  globalconst.cpp
